fixed some spacing at clear point

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 
 @media only screen and (min-width: 991px) { 
 	.container {
-		margin-top: 7%;
+		margin-top: 5%;
 	}
 	.tag-line {
 		margin-top: 25px;
@@ -57,14 +57,14 @@
 		font-size: 20px;
 	}
 	.text-header h1 {
-		font-size: 40px;
+		font-size: 36px;
 	}
 	.tag-line {
 		margin-left: 20px;
 		margin-right: 20px;
 	}
 	.tag-line h2 {
-		font-size: 24px;
+		font-size: 26px;
 	}
 	.paragraph {
 		margin-top: 15px;
@@ -165,7 +165,7 @@ body {
 }
 
 .clear {
-	padding: 30px;
+	padding: 10px;
 }
 
 .navbar {
